# housing_boba_index

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  cache.py  config.py  db_cache.py  deploy-setup.sh  models.py  price_store.py  prices.db  pyproject.toml  scoring.py  seed_db.py  shop_store.py  shops.db  shops.db-shm  shops.db-wal
.github/workflows/: deploy.yml
api_clients/: __init__.py  demo_data.py  geocoding.py  google_maps_scraper.py  google_places.py  housing_prices.py  redfin_client.py
static/css/: style.css
static/js/: app.js
templates/: index.html
